# AnnaChive---Open-Source-Resource-Downloader

./: .gitignore  COMMANDS.md  LICENSE  README.md  build-release.sh  install-annchive.sh  install.sh  pyproject.toml
AnnaChive---Open-Source-Resource-Downloader-1.0.0/: .gitignore  COMPONENTS.md  README.md  WORKFLOW.md  install.ps1  install.sh  pyproject.toml
AnnaChive---Open-Source-Resource-Downloader-1.0.0/annchive/: cli.py  config.py
AnnaChive---Open-Source-Resource-Downloader-1.0.0/annchive/sources/: __init__.py  annas_archive.py  arxiv.py  github.py  internet_archive.py  pubmed.py  scihub.py
AnnaChive---Open-Source-Resource-Downloader-1.0.0/annchive/storage/: __init__.py  downloader.py  torrent.py
AnnaChive---Open-Source-Resource-Downloader-1.0.0/annchive/tor/: __init__.py  manager.py
AnnaChive---Open-Source-Resource-Downloader-1.0.0/cmd/torrent-download/: torrent.sh
AnnaChive---Open-Source-Resource-Downloader-1.0.0/cmd/torrent-download/src/: download.rs
AnnaChive---Open-Source-Resource-Downloader-1.0.0/tests/: test_cli.py
annchive/: __init__.py  cli.py  cli.py.backup.1774588866  config.py  config.py.backup.1774588898  constants.py
annchive/sources/: __init__.py  annas_archive.py  annas_mcp.py  arxiv.py  base.py  github.py  internet_archive.py  pubmed.py  scihub.py  searxng.py  semantic_scholar.py
annchive/storage/: __init__.py  database.py  database.py.backup.1774588926  downloader.py  torrent.py
annchive/tor/: __init__.py  manager.py  proxy.py
annchive/utils/: __init__.py  logger.py
cmd/torrent-download/: Cargo.toml
cmd/torrent-download/src/: anna.rs  download.rs  main.rs
man/: README.md  annchive.1
tests/: __init__.py  test_cli.py
