[package]
name = "annchive-torrent"
version = "1.0.0"
edition = "2021"
description = "High-performance torrent downloader for AnnaChive CLI"
authors = ["Akarsh <akarshbandi82@gmail.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client for fetching torrents
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (minimal for security)
log = "0.4"
env_logger = "0.11"

# URL encoding
urlencoding = "2.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1